<resources>
    <string name="app_name">CustomComponentAndroidApplication</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="customercomponent">Customer Component</string>
    <string name="changeEditTextValue">Change Edit Text</string>
    <string name="loginForm">Login Form</string>
    <string name="login">Login</string>
    <string name="animator">Animate</string>

</resources>
