<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/animator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@drawable/pressbuttonbg"
        android:text="@string/animator"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginForm"/>

    <com.example.course.custom_component.CustomUIComponent
        android:id="@+id/component"
        android:layout_width="200dip"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeEditTextValue"
        android:onClick="changeEditTextValue"/>
</LinearLayout>
